style(carousel): fix caption style on small and medium screen

--- a/assets/main/scss/_carousel.scss
+++ b/assets/main/scss/_carousel.scss
@@ -1,9 +1,6 @@
 .carousel-caption {
     background: rgba(0, 0, 0, .75);
     bottom: -20px;
-    :last-child {
-        margin-bottom: 20px;
-    }
 }
 
 .carousel-indicators {
